--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
@@ -18,10 +18,19 @@ jobs:
         with:
           clean: false
 
-      - name: Set up JDK
+      - name: Run actions/setup-java@v2
         uses: actions/setup-java@v2
         with:
-          java-version: '11' # 사용 가능한 Java 버전으로 변경
+          java-version: 17
+          distribution: 'adopt'  # JDK 배포자를 선택합니다.
+          java-package: 'jdk'
+          architecture: 'x64'
+          check-latest: false
+          server-id: 'github'
+          server-username: ${{ github.actor }}
+          server-password: ${{ github.token }}
+          overwrite-settings: true
+          job-status: 'success'
 
       - name: Stop old server (ignore error)
         run: |
