--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,12 +42,12 @@ jobs:
 
       - name: Build Spring application
         run: |
-          ./gradlew build
+          ./gradlew clean build -x test
 
       - name: Copy new server to ~/source
         run: |
           mkdir -p ~/source
-          cp -R ./build/libs/*.jar ~/source/locomoco-server-0.0.1-SNAPSHOT.jar # JAR 파일의 경로를 확인하여 수정
+          cp -R ./Locomoco_BE/build/libs/locomoco-server-0.0.1-SNAPSHOT.jar ~/source # JAR 파일의 경로를 확인하여 수정
 
       - name: Run new server (in background)
         run: |
