--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,4 +51,4 @@ jobs:
 
       - name: Run new server (in background)
         run: |
-          nohup java -jar ~/source/locomoco-server-0.0.1-SNAPSHOT.jar </dev/null >/dev/null 2>&1 &
+          java -jar ~/source/locomoco-server-0.0.1-SNAPSHOT.jar > server.log 2>&1
