--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,12 @@ jobs:
 
       - name: Stop old server (ignore error)
         run: |
-          killall -9 java || true
+          if [ -f server.pid ]; then
+            SERVER_PID=$(cat server.pid)
+            kill -15 $SERVER_PID || true
+            rm server.pid
+            echo "Old server with PID $SERVER_PID stopped"
+          fi
 
       - name: Remove old server directory (ignore error)
         run: |
@@ -51,9 +56,7 @@ jobs:
 
       - name: Start the server
         run: |
-          java -jar ~/source/locomoco-server-0.0.1-SNAPSHOT.jar > server.log 2>&1 &
+          nohup java -jar ~/source/locomoco-server-0.0.1-SNAPSHOT.jar > server.log 2>&1 &
           SERVER_PID=$!
-          while ! nc -z localhost 8090; do
-            sleep 1
-          done
-          echo "Server started"
+          echo $SERVER_PID > server.pid
+          echo "Server started with PID $SERVER_PID"
