--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,54 +8,63 @@ on:
   push:
     branches: [ master ]
   workflow_dispatch:
-
+  
 jobs:
-  build:
-    runs-on: [ self-hosted ]
+  deploy:
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-        with:
-          clean: false
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Run actions/setup-java@v2
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: 'adopt'
-          java-package: 'jdk'
-          architecture: 'x64'
-          check-latest: false
-          server-id: 'github'
-          server-username: ${{ github.actor }}
-          server-password: ${{ github.token }}
-          overwrite-settings: true
-          job-status: 'success'
+      - name: Run deployment script
+        run: bash ~/scripts/deploy.sh
 
-      - name: Stop old server (ignore error)
-        run: |
-          killall -9 java || true
+# jobs:
+#   build:
+#     runs-on: [ self-hosted ]
 
-      - name: Remove old server directory (ignore error)
-        run: |
-          rm -rf ~/source || true
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           clean: false
 
-      - name: Build Spring application
-        run: |
-          cd Locomoco_BE
-          git fetch
-          git pull origin master
-          ./gradlew clean build -x test
+#       - name: Run actions/setup-java@v2
+#         uses: actions/setup-java@v2
+#         with:
+#           java-version: 17
+#           distribution: 'adopt'
+#           java-package: 'jdk'
+#           architecture: 'x64'
+#           check-latest: false
+#           server-id: 'github'
+#           server-username: ${{ github.actor }}
+#           server-password: ${{ github.token }}
+#           overwrite-settings: true
+#           job-status: 'success'
 
-      - name: Copy new server to ~/source
-        run: |
-          mkdir -p ~/source
-          cp -R ~/Locomoco_BE/build/libs/locomoco-server-0.0.1-SNAPSHOT.jar ~/source
+#       - name: Stop old server (ignore error)
+#         run: |
+#           killall -9 java || true
 
-      - name: Start the server
-        run: |
-          cd ~/source
-          nohup java -jar locomoco-server-0.0.1-SNAPSHOT.jar > server.log 2>&1 &
-          echo "Server started"
-      - name: Complete job
-        run: |
+#       - name: Remove old server directory (ignore error)
+#         run: |
+#           rm -rf ~/source || true
+
+#       - name: Build Spring application
+#         run: |
+#           cd Locomoco_BE
+#           git fetch
+#           git pull origin master
+#           ./gradlew clean build -x test
+
+#       - name: Copy new server to ~/source
+#         run: |
+#           mkdir -p ~/source
+#           cp -R ~/Locomoco_BE/build/libs/locomoco-server-0.0.1-SNAPSHOT.jar ~/source
+
+#       - name: Start the server
+#         run: |
+#           cd ~/source
+#           nohup java -jar locomoco-server-0.0.1-SNAPSHOT.jar > server.log 2>&1 &
+#           echo "Server started"
