--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run deployment script
-        run: bash ~/scripts/deploy.sh
+        run: ~/scripts/deploy.sh
 
 # jobs:
 #   build:
