--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,10 @@
 name: App install and start
 
-concurrency:
-  group: production
-  cancel-in-progress: true
-
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   workflow_dispatch:
-  
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -17,8 +13,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Make scripts directory
+        run: mkdir -p ~/scripts
+
+      - name: Copy deployment script
+        run: cp scripts/deploy.sh ~/scripts/deploy.sh
+      
+      - name: Add execute permission to the script
+        run: chmod +x ~/scripts/deploy.sh
+
       - name: Run deployment script
         run: ~/scripts/deploy.sh
+
 
 # jobs:
 #   build:
