--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Create application.yml
         run: printf "%s" "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
 
-      - name: Read application.yml
-        run: cat ./src/main/resources/application.yml
+      - name: Read main directory
+        run: ls ./src/main
         
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@ec92e829475ac0c2315ea8f9eced72db85bb337a # v3.0.0
