--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -27,6 +27,12 @@ jobs:
       - name: Create application.yml
         run: printf "%s" "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
 
+      - name: Read pwd
+        run: pwd
+
+      - name: Read resources
+        run: cat ./src/main/java/org/prgms/locomocoserver/LocomocoServerApplication.java
+
       - name: Permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
