--- a/appspec.yml
+++ b/appspec.yml
@@ -10,6 +10,6 @@ permissions:
     group: ubuntu
 hooks:
   AfterInstall:
-    - location: ./deploy.sh
+    - location: scripts/deploy.sh
       timeout: 60
       runas: ubuntu
