--- a/appspec.yml
+++ b/appspec.yml
@@ -4,12 +4,15 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/locomoco
+    overwrite: yes
 permissions:
   - object: /home/ubuntu/locomoco
+    pattern: "**"
     owner: ubuntu
     group: ubuntu
     mode: 777
 hooks:
   AfterInstall:
     - location: scripts/deploy.sh
-      timeout: 60
+      timeout: 120
+      runas: ubuntu
