--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build:
-    runs-on: [self-hosted, linux, x64, ec2]
+    runs-on: ubuntu-latest
     permissions:
       contents: read
 
@@ -46,7 +46,7 @@ jobs:
   deploy:
     needs: build
 
-    runs-on: [self-hosted, linux, x64, ec2]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Configure AWS credentials
