--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.0'
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.0.Alpha1'
 
     // WebSocket
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
