chore #159: gradle 로깅 레벨 수정

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,13 @@ tasks.named('bootBuildImage') {
 
 tasks.named('test') {
     useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+        showCauses = true
+        showExceptions = true
+        showStackTraces = true
+        exceptionFormat = 'full'
+    }
     finalizedBy 'testCoverage'
 }
 
