chore: test 시에는 test 프로파일을 사용하도록 설정

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ tasks.named('bootBuildImage') {
 
 tasks.named('test') {
     useJUnitPlatform()
+    systemProperty 'spring.profiles.active', 'test'
     testLogging {
         showCauses = true
         showExceptions = true
