--- a/.github/workflows/build-deploy-dev.yml
+++ b/.github/workflows/build-deploy-dev.yml
@@ -34,7 +34,7 @@ jobs:
         distribution: 'temurin'
 
     - name: Create application.yml
-      run: echo {{ secrets.DEV_APPLICATION_YML }} > ./src/main/resources/application.yml
+      run: printf "%s" "${{ secrets.DEV_APPLICATION_YML }}" > ./src/main/resources/application.yml
 
     - name: Create directory test resources
       run: mkdir ./src/test/resources
