chore: 운영 서버 자동 CI/CD에 도커를 이용하도록 수정

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -5,12 +5,6 @@ on:
     branches: [ "master" ]
   workflow_dispatch:
 
-env:
-  PROJECT_NAME: locomoco
-  BUCKET_NAME: locomoco-bucket
-  CODE_DEPLOY_APP_NAME: locomoco
-  DEPLOYMENT_GROUP_NAME: locomoco-group
-
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
@@ -44,19 +38,21 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Docker build and push
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/locomoco .
+          docker push ${{ secrets.DOCKER_USERNAME }}/locomoco
+
+      - name: Access EC2 and run application
+        uses: appleboy/ssh-action@v1.0.3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: ap-northeast-2
-
-      - name: Make Zip File
-        run: zip -r ./$GITHUB_SHA.zip .
-        shell: bash
-
-      - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
-
-      - name: Code Deploy To EC2 instance
-        run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name $DEPLOYMENT_GROUP_NAME --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
+          host: ${{ secrets.AWS_EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.AWS_EC2_KEY_PAIR }}
+          port: 22
+          script: |
+            docker stop $(docker ps -a -q) 
+            docker rm $(docker ps -a -q) 
+            docker pull ${{ secrets.DOCKER_USERNAME }}/locomoco
+            docker run -d -p 8090:8090 --name locomoco-server ${{ secrets.DOCKER_USERNAME }}/locomoco
