--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       run: printf "%s" "${{ secrets.TEST_APPLICATION_YML }}" > ./src/test/resources/application.yml
 
     - name: Create mysql test data
-      run: echo "${{ secrets.MYSQL_TEST_DATA_BASE64 }}" | base64 --decode > ./src/main/resources/data.sql
+      run: echo "${{ secrets.MYSQL_TEST_DATA }}" | base64 --decode > ./src/main/resources/data.sql
       
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@ec92e829475ac0c2315ea8f9eced72db85bb337a
