--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,11 +11,19 @@ jobs:
     permissions:
       contents: read
 
+    services:
+      mysql:
+        image: mysql:latest
+        env:
+          MYSQL_DATABASE: 'locomoco_db_test'
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+          MYSQL_USER: ${{ secrets.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
+    
     steps:
-      - uses: actions/checkout@v4
-      - name: Set execute permission for deploy.sh
-        run: chmod +x scripts/deploy.sh
-
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -31,14 +39,15 @@ jobs:
       - name: Create test application.yml
         run: printf "%s" "${{ secrets.TEST_APPLICATION_YML }}" > ./src/test/resources/application.yml
 
-      - name: Setup mysql
-        uses: mirromutth/mysql-action@v1.1
-        with:
-          host port: 3306
-          container port: 3306
-          mysql database: 'locomoco_db_test'
-          mysql user: ${{ secrets.MYSQL_USER }}
-          mysql password: ${{ secrets.MYSQL_PASSWORD }}
+      - name: Create mysql test data
+        run: echo "${{ secrets.MYSQL_TEST_DATA }}" | base64 --decode > ./src/main/resources/data.sql
+  
+      - name: Restore database from data
+        run: |
+          mysql -h 127.0.0.1 -u ${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }} locomoco_db_test < ./src/main/resources/data.sql
+
+      - name: Remove data.sql
+        run: rm ./src/main/resources/data.sql
 
       - name: Permission for gradlew
         run: chmod +x ./gradlew
