--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -24,6 +24,8 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
     
     steps:
+      - uses: actions/checkout@v4
+    
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
