--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -75,4 +75,4 @@ jobs:
             docker stop $(docker ps -a -q) 
             docker rm $(docker ps -a -q) 
             docker pull ${{ secrets.DOCKER_USERNAME }}/locomoco
-            docker run -d -p 8090:8090 --name locomoco-server ${{ secrets.DOCKER_USERNAME }}/locomoco
+            docker run -d -e TZ=Asia/Seoul -p 8090:8090 --name locomoco-server ${{ secrets.DOCKER_USERNAME }}/locomoco
