--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       run: printf "%s" "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
 
     - name: Create directory test resources
-      run: mkdir ./src/test/resources
+      run: mkdir -p ./src/test/resources
 
     - name: Create test application.yml
       run: printf "%s" "${{ secrets.TEST_APPLICATION_YML }}" > ./src/test/resources/application.yml
