fix: 서울 시간대 추가

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -75,4 +75,4 @@ jobs:
             docker stop $(docker ps -a -q) 
             docker rm $(docker ps -a -q) 
             docker pull ${{ secrets.DOCKER_USERNAME }}/locomoco
-            docker run -d -p 8090:8090 -v /home/ubuntu/logs:/logs --name locomoco-server ${{ secrets.DOCKER_USERNAME }}/locomoco
+            docker run -d -p 8090:8090 -v /home/ubuntu/logs:/logs -e TZ=Asia/Seoul --name locomoco-server ${{ secrets.DOCKER_USERNAME }}/locomoco
